--- a/content/sass/_icons.scss
+++ b/content/sass/_icons.scss
@@ -34,6 +34,7 @@
 // Styleguide 8.0
 
 
+
 // Icon sizing
 //
 // .tera - Tera
@@ -45,10 +46,10 @@
 //
 // Markup:
 // <div class="inline-block soft">
-//   <i class="icon-email light-blue {$modifiers}"></i>
+//   <i class="icon-email bright-blue {$modifiers}"></i>
 // </div>
 // <div class="inline-block soft">
-//   <i class="icon-alert light-blue {$modifiers}"></i>
+//   <i class="icon-alert bright-blue {$modifiers}"></i>
 // </div>
 //
 // Styleguide 8.1
@@ -56,7 +57,7 @@
 // Icon colours
 //
 // .dark-blue - Dark blue
-// .light-blue - Light blue
+// .bright-blue - Light blue
 // .orange - Orange
 // .yellow - Yellow
 // .grey - Grey
