--- a/content/sass/_accordion.scss
+++ b/content/sass/_accordion.scss
@@ -1,79 +1,191 @@
 // Accordion
 //
-// Accordions are elements used to expand and collapse content that is broken into logical sections, much like tabs.
-//
-// Markup:
-//<div>
-//  <h3 class="js-toggle soft bg-light-grey-1 dark-blue">Click me to show or hide the content <i class="icon-plus pull-right light-blue"></i></h3>
-//  <div class="js-toggle-content soft">
-//    Accordion content lorem ipsum dolor
-//  </div>
-//</div>
-//<div>
-//  <h3 class="js-toggle soft bg-light-grey-1 dark-blue">Click me to show or hide the content <i class="icon-plus pull-right light-blue"></i></h3>
-//  <div class="js-toggle-content soft">
-//    Accordion content lorem ipsum dolor
-//  </div>
-//</div>
-//<div>
-//  <h3 class="js-toggle soft bg-light-grey-1 dark-blue">Click me to show or hide the content <i class="icon-plus pull-right light-blue"></i></h3>
-//  <div class="js-toggle-content soft">
-//    Accordion content lorem ipsum dolor
-//  </div>
-//</div>
-//<div>
-//  <h3 class="js-toggle soft bg-light-grey-1 dark-blue">Click me to show or hide the content <i class="icon-plus pull-right light-blue"></i></h3>
-//  <div class="js-toggle-content soft">
-//    Accordion content lorem ipsum dolor
-//  </div>
-//</div>
-//<div>
-//  <h3 class="js-toggle soft bg-light-grey-1 dark-blue">Click me to show or hide the content <i class="icon-plus pull-right light-blue"></i></h3>
-//  <div class="js-toggle-content soft">
-//    Accordion content lorem ipsum dolor
-//  </div>
-//</div>
-//
-//
+// Accordions are elements used to expand and collapse content that is broken into logical sections, much like tabs. A lightweight (~1kb) jQuery plugin that enables expanding and collapsing content. 
 //
 // Styleguide 1.0
 
-
-// Simple accordion open default
+// Default Example
 //
 // Markup:
-//<div>
-//  <h3 class="js-toggle js-toggle--open bg-light-grey-1 soft">Click me to show or hide the content <i class="icon-minus pull-right light-blue"></i></h3>
-//  <div class="js-toggle-content soft outline--light">
-//    Add class .js-toggle--open to show the content by default
-//  </div>
-//</div>
-//<div>
-//  <h3 class="js-toggle bg-light-grey-1 soft">Click me to show or hide the content <i class="icon-plus pull-right light-blue"></i></h3>
-//  <div class="js-toggle-content soft outline--light">
+//<div data-collapse="">
+//  <h3 class="js-collapse soft bg-light-grey-1"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft">
 //    Accordion content lorem ipsum dolor
 //  </div>
-//</div>
-//<div>
-//  <h3 class="js-toggle bg-light-grey-1 soft">Click me to show or hide the content <i class="icon-plus pull-right light-blue"></i></h3>
-//  <div class="js-toggle-content soft outline--light">
+//  <h3 class="js-collapse soft bg-light-grey-1"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft">
 //    Accordion content lorem ipsum dolor
 //  </div>
-//</div>
-//<div>
-//  <h3 class="js-toggle bg-light-grey-1 soft">Click me to show or hide the content <i class="icon-plus pull-right light-blue"></i></h3>
-//  <div class="js-toggle-content soft outline--light">
+//  <h3 class="js-collapse soft bg-light-grey-1"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft">
 //    Accordion content lorem ipsum dolor
 //  </div>
-//</div>
-//<div>
-//  <h3 class=" js-toggle bg-light-grey-1 soft">Click me to show or hide the content <i class="icon-plus pull-right light-blue"></i></h3>
-//  <div class="js-toggle-content soft outline--light">
+//  <h3 class="js-collapse soft bg-light-grey-1"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft">
+//    Accordion content lorem ipsum dolor
+//  </div>
+//  <h3 class="js-collapse soft bg-light-grey-1"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft">
 //    Accordion content lorem ipsum dolor
 //  </div>
 //</div>
 //
+//
+//
 // Styleguide 1.1
+
+
+// Accordion Example
+//
+// Markup:
+//<div data-collapse="accordion">
+//  <h3 class="js-collapse soft bg-light-grey-1"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft">
+//    Accordion content lorem ipsum dolor
+//  </div>
+//  <h3 class="js-collapse soft bg-light-grey-1"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft">
+//    Accordion content lorem ipsum dolor
+//  </div>
+//  <h3 class="js-collapse soft bg-light-grey-1"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft">
+//    Accordion content lorem ipsum dolor
+//  </div>
+//  <h3 class="js-collapse soft bg-light-grey-1"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft">
+//    Accordion content lorem ipsum dolor
+//  </div>
+//  <h3 class="js-collapse soft bg-light-grey-1"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft">
+//    Accordion content lorem ipsum dolor
+//  </div>
+//</div>
+//
+//
+//
+// Styleguide 1.2
+
+
+// Persistence Example
+//
+// Markup:
+//<div data-collapse="persist">
+//  <h3 class="js-collapse soft bg-light-grey-1"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft">
+//    Accordion content lorem ipsum dolor
+//  </div>
+//  <h3 class="js-collapse soft bg-light-grey-1"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft">
+//    Accordion content lorem ipsum dolor
+//  </div>
+//  <h3 class="js-collapse soft bg-light-grey-1"<i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft">
+//    Accordion content lorem ipsum dolor
+//  </div>
+//  <h3 class="js-collapse soft bg-light-grey-1"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft">
+//    Accordion content lorem ipsum dolor
+//  </div>
+//  <h3 class="js-collapse soft bg-light-grey-1"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft">
+//    Accordion content lorem ipsum dolor
+//  </div>
+//</div>
+//
+//
+//
+// Styleguide 1.3
+
+
+// Open default section by default
+//
+// Markup:
+//<div data-collapse>
+//  <h3 class="js-collapse bg-light-grey-1 soft open"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft outline--light">
+//    Add class .open to show the content by default
+//  </div>
+//  <h3 class="js-collapse bg-light-grey-1 soft"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft outline--light">
+//    Accordion content lorem ipsum dolor
+//  </div>
+//  <h3 class="js-collapse bg-light-grey-1 soft"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft outline--light">
+//    Accordion content lorem ipsum dolor
+//  </div>
+//  <h3 class="js-collapse bg-light-grey-1 soft"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft outline--light">
+//    Accordion content lorem ipsum dolor
+//  </div>
+//  <h3 class="js-collapse bg-light-grey-1 soft"><i class="icon icon-minus"></i><i class="icon icon-plus"></i> Click me to show or hide the content</h3>
+//  <div class="soft outline--light">
+//    Accordion content lorem ipsum dolor
+//  </div>
+//</div>
+//
+// Styleguide 1.4
+
+
+
+.js-collapse {
+	border-top:2px solid $light-grey-2;
+	font-family:$primary-font;
+		
+	a {
+		color:$dark-grey-3;
+		display:block;
+		&:visited {
+			color:$dark-grey-3;
+			}
+		}
+	
+	.icon-minus,
+	.icon-plus {
+		color:$mid-grey-2;
+		font-size:em(21px);
+		}
+		
+	.icon-minus {
+		display:none;
+		}
+		
+	&.open {
+		.icon-minus {
+			display:inline-block;
+			}
+		.icon-plus {
+			display:none;
+			}
+		}
+		
+	}
+	
+.collapse__info {
+	@include respond-max(47.95em) {
+		@include visuallyhidden;
+		}
+		
+	@include respond-min(48em) {
+		color:$mid-grey-3;
+		font-family:georgia;
+		font-size:em(12px);
+		font-style:italic;
+		position:absolute;
+		right:0;
+		top:lh(.75);
+		}
+
+	}
+	
+.collapse__content {	
+	@include respond-min(48em) {
+		padding-left:lh(1.33);
+		}
+
+	}
+
+
+
 
 
 
