--- a/content/sass/_buttons.scss
+++ b/content/sass/_buttons.scss
@@ -47,7 +47,7 @@
 // .btn--danger    - Indicates a dangerous or potentially negative action.
 // .btn--link      - Deemphasize a button by making it look like a link while maintaining button behavior.
 // .btn--dark-blue   - Brand basics Dark blue 
-// .btn--light-blue  - Brand basics Light blue
+// .btn--bright-blue  - Brand basics Light blue
 // .btn--yellow   - Brand basics Yellow
 // .btn--orange   - Brand basics Orange
 // .btn--grey - Brand basics Grey 
@@ -74,7 +74,7 @@
 // .btn--warning - Warning
 // .btn--danger - Danger
 // .btn--dark-blue - Dark-blue
-// .btn--light-blue - Light-blue
+// .btn--bright-blue - bright-blue
 // .btn--yellow - Yellow
 // .btn--orange - Orange
 // .btn--grey - Grey
@@ -101,7 +101,6 @@
 //
 // Styleguide 4.5
 	
-
 .btn {
 	@include border-radius(2px);
 	background-color:$light-grey-1;
@@ -118,7 +117,6 @@
 	outline: none;
 	padding: 0 lh(1.33);
 	position: relative;
-	text-align: center;
 	text-decoration: none;
 	
 	@include respond-min(60em) {
@@ -233,15 +231,15 @@
 	
 
 .btn--primary {
-	background-color:$light-blue;
-	border-color:darken($light-blue, 10%);
+	background-color:$bright-blue;
+	border-color:darken($bright-blue, 5%);
 	color:#fff;
 
 	&:hover,
 	&:focus,
 	&.active,
 	&:active {
-		background-color:darken($light-blue, 10%);
+		background-color:darken($bright-blue, 5%);
 		color:#fff;
 		}
 		
@@ -254,7 +252,7 @@
 // Warning appears are orange
 .btn--warning {
 	background-color:$warning-color;
-	border-color:darken($warning-color, 10%);
+	border-color:darken($warning-color, 5%);
 	color:#fff;
 	&:visited {
 		color:#fff;
@@ -264,7 +262,7 @@
 	&:focus,
 	&.active,
 	&:active {
-		background-color:darken($warning-color, 10%);
+		background-color:darken($warning-color, 5%);
 		color:#fff;
 		}
 		
@@ -276,14 +274,14 @@
 // Danger and error appear as red
 .btn--danger {
 	background-color:$danger-color;
-	border-color:darken($danger-color, 10%);
+	border-color:darken($danger-color, 5%);
 	color:#fff;
 	
 	&:hover,
 	&:focus,
 	&.active,
 	&:active {
-		background-color:darken($danger-color, 10%);
+		background-color:darken($danger-color, 5%);
 		color:#fff;
 		}
 		
@@ -297,14 +295,14 @@
 // Success appears as green
 .btn--success {
 	background-color:$success-color;
-	border-color:darken($success-color, 10%);
+	border-color:darken($success-color, 5%);
 	color:#fff;
 	
 	&:hover,
 	&:focus,
 	&.active,
 	&:active {
-		background-color:darken($success-color, 10%);
+		background-color:darken($success-color, 5%);
 		color:#fff;
 		}
 		
@@ -317,14 +315,14 @@
 // Info appears as a neutral blue
 .btn--info {
 	background-color:$info-color;
-	border-color:darken($info-color, 10%);
+	border-color:darken($info-color, 5%);
 	color:$dark-blue;
 	
 	&:hover,
 	&:focus,
 	&.active,
 	&:active {
-		background-color:darken($info-color, 10%);
+		background-color:darken($info-color, 5%);
 		color:#fff;
 		}
 		
@@ -344,26 +342,25 @@
 	&.active,
 	&:active {
 		background-color:transparent;
-		color:$light-blue;
+		color:$bright-blue;
 		}
 	&:visited {
-		color:$light-blue;
+		color:$bright-blue;
 		}
 		
 	}
 	
 
-	
 .btn--dark-blue {
 	background-color:$dark-blue;
-	border-color:darken($dark-blue, 10%);
+	border-color:darken($dark-blue, 5%);
 	color:#fff;
 	
 	&:hover,
 	&:focus,
 	&.active,
 	&:active {
-		background-color:darken($dark-blue, 10%);
+		background-color:darken($dark-blue, 5%);
 		color:#fff;
 		}
 		
@@ -373,16 +370,16 @@
 	
 	}
 	
-.btn--light-blue {
-	background-color:$light-blue;
-	border-color:darken($light-blue, 10%);
+.btn--bright-blue {
+	background-color:$bright-blue;
+	border-color:darken($bright-blue, 5%);
 	color:#fff;
 	
 	&:hover,
 	&:focus,
 	&.active,
 	&:active {
-		background-color:darken($light-blue, 10%);
+		background-color:darken($bright-blue, 5%);
 		color:#fff;
 		}
 		
@@ -394,32 +391,33 @@
 	
 .btn--yellow {
 	background-color:$yellow;
-	border-color:darken($yellow, 10%);
+	border-color:darken($yellow, 5%);
 	color:$dark-blue;
 	
 	&:hover,
 	&:focus,
 	&.active,
 	&:active {
-		background-color:darken($yellow, 10%);
+		background-color:darken($yellow, 5%);
 		color:#fff;
 		}
 		
-	&:visited {
+	&:visited, 
+	&.btn--icon .icon {
 		color:$dark-blue;
 		}
 	}	
 	
 .btn--orange {
 	background-color:$orange;
-	border-color:darken($orange, 10%);
+	border-color:darken($orange, 5%);
 	color:#fff;
 	
 	&:hover,
 	&:focus,
 	&.active,
 	&:active {
-		background-color:darken($orange, 10%);
+		background-color:darken($orange, 5%);
 		color:#fff;
 		}
 		
@@ -430,14 +428,14 @@
 	
 .btn--grey {
 	background-color:$grey;
-	border-color:darken($grey, 10%);
+	border-color:darken($grey, 5%);
 	color:#fff;
 	
 	&:hover,
 	&:focus,
 	&.active,
 	&:active {
-		background-color:darken($grey, 10%);
+		background-color:darken($grey, 5%);
 		color:#fff;
 		}
 		
@@ -470,7 +468,8 @@
 	padding-right:rem(42px);
 	position:relative;
 	.icon {
-		background-color: rgba(0,0,0,0.25);
+		background-color: rgba(0,0,0,0.15);
+		background-color: rgba(0,0,0,0.05);
 		color:#fff;
 		height:100%;
 		right:0;
