--- a/content/sass/_forms.scss
+++ b/content/sass/_forms.scss
@@ -16,20 +16,20 @@
 //  <ul>
 //    <li>
 //      <label for="exampleText1">Textfield <em>Optional</em></label>
-//      <input type="text" id="exampleText1" name="exampleText1">
+//      <input type="text" id="exampleText1" name="exampleText1" />
 //    </li>
 //    <li>
 //      <label for="exampleInputEmail1">Email address</label>
-//      <input type="email" placeholder="Enter email" title="Example help text">
+//      <input type="email" placeholder="Enter email" title="Example help text" />
 //      <p class="gamma">Example help text</p>
 //    </li>
 //    <li>
 //      <label for="exampleInputPassword1">Password</label>
-//      <input type="password" placeholder="Password" id="exampleInputPassword1">
+//      <input type="password" placeholder="Password" id="exampleInputPassword1" />
 //    </li>
 //    <li class="form__alert form__alert--danger" tabindex="7">
 //      <label for="exampleInputPassword2">Confirm Password</label>
-//      <input type="password" placeholder="Confirm Password" id="exampleInputPassword2">
+//      <input type="password" placeholder="Confirm Password" id="exampleInputPassword2" />
 //    </li>
 //    <li>
 //      <label for="exampleTextarea1">Text area</label>	
@@ -38,7 +38,7 @@
 //    <li class="row">
 //      <label for="inlineInput1" class="col medium_12">Inline input</label>
 //      <div class="col medium_9">
-//        <input type="text" id="inlineInput1" size="50" maxlength="50" class=""> 
+//        <input type="text" id="inlineInput1" size="50" maxlength="50" />
 //      </div>
 //      <div class="col medium_3">
 //        <button class="btn btn--block" class="">Search</button>
@@ -56,21 +56,21 @@
 //    </li>
 //    <li>
 //      <label for="exampleInputFile">File input</label>
-//      <input type="file" id="exampleInputFile">
+//      <input type="file" id="exampleInputFile" />
 //    <li>
 //    <li>
 //      <fieldset>
 //        <legend>Checkbox</legend>	
 //        <label for="exampleCheckbox1">
-//          <input type="checkbox" checked="checked" value="Forms" id="exampleCheckbox1"> 
+//          <input type="checkbox" checked="checked" value="Forms" id="exampleCheckbox1" /> 
 //          Forms
 //        </label>
 //        <label for="exampleCheckbox2">
-//          <input type="checkbox" value="Pages" id="exampleCheckbox2"> 
+//          <input type="checkbox" value="Pages" id="exampleCheckbox2" />
 //          Pages
 //        </label>
 //        <label for="exampleCheckbox3">
-//          <input type="checkbox" value="Directories" id="exampleCheckbox3"> 
+//          <input type="checkbox" value="Directories" id="exampleCheckbox3" /> 
 //          Directories
 //        </label>
 //      </fieldset>
@@ -79,15 +79,15 @@
 //      <fieldset>
 //        <legend>Radio</legend>	
 //        <label for="exampleradio1">
-//          <input type="radio" class="checkbox" value="One" id="xforms_Radio_0"> 
+//          <input type="radio" class="checkbox" value="One" id="xforms_Radio_0" /> 
 //          One
 //        </label>
 //        <label for="exampleradio2">
-//        <input type="radio" class="checkbox" checked="checked" value="Two" id="exampleradio2"> 
+//        <input type="radio" class="checkbox" checked="checked" value="Two" id="exampleradio2" />
 //          Two
 //        </label>
 //        <label for="exampleradio3">
-//          <input type="radio" class="checkbox" value="Three" id="exampleradio3"> 
+//          <input type="radio" class="checkbox" value="Three" id="exampleradio3" /> 
 //          Three
 //        </label>
 //      </fieldset>
@@ -109,25 +109,25 @@
 //    <li class="row">
 //		  <label for="exampleInputEmail5" class="col medium_3">Email address</label>
 //		  <div class="col medium_9">
-//			  <input type="email" id="exampleInputEmail5"  placeholder="Enter email">
+//			  <input type="email" id="exampleInputEmail5"  placeholder="Enter email" />
 //		  </div>
 //	  </li>
 //	  <li class="row">
 //		  <label for="exampleInputPassword5" class="col medium_3">Password</label>
 //		  <div class="col medium_9">
-//			  <input type="password" id="exampleInputPassword5" placeholder="Password">
+//			  <input type="password" id="exampleInputPassword5" placeholder="Password" />
 //		  </div>
 //	  </li>
 //    <li class="row">
 //      <label for="exampleInputFile5" class="col medium_3">File input</label>
 //	    <div class="col medium_9">
-//     	  <input type="file" id="exampleInputFile5">
+//     	  <input type="file" id="exampleInputFile5" />
 //     	  <p class="gamma">Example block-level help text here.</p>
 //      </div>
 //    </li>
 //    <li class="checkbox push_3">
 //      <label>
-//        <input type="checkbox"> Check me out
+//        <input type="checkbox" /> Check me out
 //      </label>
 //    </li>
 //    <button type="submit" class="btn pull-right">Submit</button>
@@ -268,13 +268,13 @@ textarea[disabled] {
 		}
 		
 	.error {
-		color:$red;
+		color:$danger-color;
 		}
 		
 	input.error {
-		border-color:$red;
+		background-color:rgba($danger-color, .5);
+		border-color:$danger-color;
 		color:#444;
-		background-color: #f2dede;
 		}
 	
 	}
@@ -335,7 +335,6 @@ textarea[disabled] {
 		
 	input {
 		border-color:$danger-color;
-		background-color:lighten($danger-color, 35%);
 		}
 		
 	}
