--- a/content/sass/_kss.scss
+++ b/content/sass/_kss.scss
@@ -69,20 +69,20 @@ pre .regexp {
 	@include respond-min(48em) {
 		margin-left: 1.25%;
 		margin-right: 1.25%;
-		max-width: 236px;
+
 		overflow: hidden;
 		}
 	
 	@include respond-min(60em) {
-		max-width: 216px;
+		padding-right:lh(1.66);
 		}
 		
 	@include respond-min(75em) {
-		max-width: 270px;
+		
 		}
 		
 	@include respond-min(90em) {
-		max-width: 324px;
+		
 		}
 
 	}
@@ -106,7 +106,7 @@ pre .regexp {
 
 .kss-nav {
 	background-color:$blue-tint;
-	padding:lh(1);
+	padding:0 lh(1);
 	margin: 0 0 lh(2) 0;
 	@include respond-min(48em) {
 		margin: 0;
@@ -114,25 +114,24 @@ pre .regexp {
 	}
 
 .kss-menu {
+	font-family:$primary-font;
 	margin: 0;
 	padding: 0;
 	list-style-type: none
 	}
 
 .kss-menu>.kss-menu-item {
+	display: block;
 	line-height: 1.3;
-	color: #222;
-	display: block
 	}
 
 .kss-menu > .kss-menu-item > a {
-	border-bottom: 1px solid darken($blue-tint, 5%);
-	color:$light-blue;
+	border-left:4px solid #fff;
+	color:$bright-blue;
 	display: block;
-	font-family:$secondary-font;
-	font-size:rem(18px);
+	font-size:rem(16px);
 	font-weight:normal;
-	padding: lh(.33) 0 lh(.33) lh(.25);
+	padding: lh(.25) 0 lh(.25) lh(.66);
 	text-decoration: none;
 	&:hover {
 		color:$dark-blue;
@@ -157,22 +156,21 @@ pre .regexp {
 	}
 
 .kss-menu >.kss-menu-item > a > .kss-ref {
-	color:$light-blue;
+	color:$bright-blue;
+	display:inline-block;
 	float:left;
-	margin-right: 10px;
+	margin-right:rem(10px);
+	width:rem(15px);
 	}
 
 .kss-menu >.kss-menu-item > a > .kss-name {
 	display: block;
 	overflow: hidden;
-	text-overflow: ellipsis;
-	text-align: right;
-	white-space: nowrap;
 	}
 	
 
 .kss-menu > .kss-menu-item.kss-active > a {
-	border-bottom-color: $dark-blue;
+	border-left:4px solid $dark-blue;
 	color: $dark-blue;
 	}
 	
@@ -181,29 +179,31 @@ pre .regexp {
 	}
 
 .kss-menu-child {
-	border-bottom: 1px solid $dark-blue;
+	background-color:#fff;
 	display: none;
 	list-style-type: none;
-	margin: 0;
-	padding:lh(.33) 0;
+	margin: 0 lh(-1);
+	padding:lh(.33) lh(1.66);
 	}
 	
 .kss-menu-child > .kss-menu-item {
 	color: #222;
-	font-size: 12px;
-	line-height: 1.3;
+	font-size: rem(13px);
+	line-height: 1.2;
 	}
 	
 .kss-menu-child > .kss-menu-item > a {
-	color:$dark-blue;
+	color:$bright-blue;
 	display: block;
 	padding: 5px 0 6px 5px;
 	text-decoration: none;
 	}
 
-.kss-menu-child > .kss-menu-item > a:hover {
+.kss-menu-child > 
+ > a:hover {
 	color: $dark-blue;
 	}
+
 
 .kss-menu-child > .kss-menu-item > a > .kss-ref {
 	color:inherit;
@@ -214,19 +214,15 @@ pre .regexp {
 .kss-menu-child > .kss-menu-item > a > .kss-name {
 	display: block;
 	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	text-align: right
 	}
 
 .kss-menu-child > .kss-menu-item.kss-active > a,
 .kss-menu-child > .kss-menu-item.kss-active > a .kss-ref  {
 	color: $dark-blue;
-	font-weight:bold;
 	}
 	
 .kss-menu-child > .kss-menu-item.kss-active > a {
-	border-left:4px solid $dark-blue;
+	
 	}
 	
 .kss-content {
@@ -234,16 +230,16 @@ pre .regexp {
 	}
 
 .kss-section {
-	margin: -40px 0 60px;
-	padding-top: 40px
+	border-bottom:1px solid $dark-blue;
+	margin-bottom:rem(36px);
 	}
 
 .kss-overview {
 	line-height: 1.3;
 	color: #222;
+	font-size: rem(15px);
 	line-height: 1.5;
 	word-wrap: break-word;
-	font-size: 14px
 	}
 
 .kss-overview h1, 
@@ -258,7 +254,7 @@ pre .regexp {
 	}
 
 .kss-overview h1 {
-	border-bottom:1px solid $light-blue;
+	border-bottom:1px solid $bright-blue;
 	color:$dark-blue;
 	font-family: $primary-font;
 	font-weight:normal;
@@ -295,8 +291,8 @@ pre .regexp {
 .kss-overview h5, 
 .kss-overview h6 {
 	font-family: $secondary-font;
-	margin: 15px 0;
-	font-size: 16px
+	font-size: rem(16px);
+	margin: lh(.66) 0;
 	}
 
 .kss-overview p, 
@@ -383,57 +379,19 @@ pre .regexp {
 .kss-title .kss-ref {
 	margin-right: .2em;
 	}
-	
 .kss-description {
-	line-height: 1.3;
-	color: #222;
-	line-height: 1.5;
-	word-wrap: break-word;
-	font-size: 14px;
-	margin: 10px 0 20px
-	}
-	
-.kss-description h1, 
-.kss-description h2, 
-.kss-description h3, 
-.kss-description h4, 
-.kss-description h5, 
-.kss-description h6 {
-	display: block;
-	line-height: 1.3;
-	font-weight: 700
-	}
-	
-	
-.kss-description h1 {
-	margin: 60px 0 20px;
-	border-bottom: 2px solid #e3e3e3;
-	font-size: 36px
-	}
-	
-.kss-description h2 {
-	margin: 30px 0 15px;
-	font-size: 28px
-	}
-	
-.kss-description h3 {
-	margin: 20px 0 15px;
-	font-size: 20px
-	}
-	
-.kss-description h4, 
-.kss-description h5, 
-.kss-description h6 {
-	margin: 0 0 lh(.66) 0;
-	font-size: 16px
+	font-family:$secondary-font;
 	}
 
 .kss-description p, 
 .kss-description ul, 
 .kss-description ol, 
 .kss-description pre {
-	display: block;
-	margin: 0 0 lh(.66) 0;
+	color:$grey;
+	font-family:$secondary-font;
+	font-size:rem(19px);
+	line-height:1.4;
+	margin-bottom:rem(19px);
 	}
 	
 .kss-description ul {
@@ -705,9 +663,13 @@ pre .regexp {
 .kss-depth-4 .kss-title, 
 .kss-depth-5 .kss-title, 
 .kss-depth-6 .kss-title {
-	font-size: 28px
+	font-size: rem(28px);
 	}
 
 .kss-markup pre {
     border-color: #E3E3E3 #E3E3E3 #E3E3E3 $dark-grey-3;
+	}
+	
+.kss-modifier-original {
+	
 	}
