--- a/content/sass/_tabs.scss
+++ b/content/sass/_tabs.scss
@@ -3,7 +3,7 @@
 // Tabs are elements that help you organize and navigate multiple documents in a single container. They can be used for switching between items in the container.
 //
 // Markup:
-//<dl class="cf tabs">
+//<dl class="cf tabs__list">
 //  <dd class="active tabs__item">
 //    <a href="#simple1" class="tabs__link">
 //      Tab 1
@@ -50,21 +50,21 @@
 // 
 // Markup:
 //<div id="horizontalTab">
-// <ul class="resp-tabs-list">
-//   <li>
+// <ul class="resp-tab__list">
+//   <li class="resp-tab__item">
 //     Tab 1
 //   </li>
-//   <li>
+//   <li class="resp-tab__item">
 //      Tab 2
 //   </li>
-//   <li>
+//   <li class="resp-tab__item">
 //      Tab 3
 //   </li>
-//   <li>
+//   <li class="resp-tab__item">
 //      Tab 4
 //   </li>
 //  </ul>
-//  <div class="resp-tabs-container">
+//  <div class="resp-tabs__container">
 //    <div>
 //       First panel content goes here. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 //    </div>
@@ -89,7 +89,7 @@
 	border-bottom: solid 1px $light-grey-2;
 	display: block; 
 	font-family:$primary-font;
-	height:lh(2);
+	height:rem(48px);
 	list-style: none;
 	margin-bottom:lh(); 
 	padding: 0 lh(.33); 
@@ -99,21 +99,25 @@
 	display: block; 
 	float: left; 
 	margin: 0; 
-	padding: 0; 
+	padding: 0;
 	}
 
 .tabs__link { 
 	background-color:$blue-tint;
 	border-left: 1px solid $blue-tint;
 	border-top: 2px solid $blue-tint;
-	color:$light-blue;
+	color:$bright-blue;
 	display: block; 
 	font-size:rem(16px);
 	height:rem(48px);
-	line-height:lh(2);
+	line-height:rem(48px);
 	padding: 0 lh(1);
 	text-decoration:none;
 	
+	&:visited {
+		color:$bright-blue;
+		}
+		
 	&:hover {
 		color:$dark-blue;
 		cursor: pointer; 
@@ -137,7 +141,6 @@
 	text-shadow:none;
 	}
 	
-
 ul.tabs__content { 
 	display: block; 
 	margin: 0 0 20px 0;
@@ -158,59 +161,127 @@ ul.tabs__content > li.active {
 	}
 	
 	
+.tabs--pull-up {
+	
+	border-bottom: none;
+	margin-top:-72px;
+
+	.tabs__link {
+		background-color:rgba(0, 0, 0, .2);
+		border-left: 1px solid transparent;
+		border-right: 1px solid transparent;
+		
+		@include old-ie {
+			background-color:transparent;
+			background-image:url(../images/common/ie-black-opacity-20.png);
+			}
+			
+		border-top: none;
+		border-bottom:none;
+		margin-right:2px;
+		color:#fff;
+		font-size:em(15px);
+		
+		&:hover {
+			background-color:rgba(0, 0, 0, .4);
+			
+			@include old-ie {
+				background-color:transparent;
+				background-image:url(../images/common/ie-black-opacity-40.png);
+				}
+				
+			border-bottom: none;
+			color:#fff;
+			}
+		
+		&:visited {
+			color:#fff;
+			}
+			
+		}
+		
+	.active .tabs__link  { 
+		background-color:#fff;
+		border-bottom: 1px solid #fff;
+		border-left: 1px solid transparent;
+		border-right: 1px solid transparent;
+		border-top: 2px solid $bright-blue;
+		color:$bright-blue;
+		cursor: default; 
+		text-shadow:none;
+		
+		@include old-ie {
+			background-image:none;
+			}
+		
+		}
+		
+	}
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 	
 
-	
-.resp-tabs-list {
+.resp-tab__list {
 	@include clearfix();
-	border-bottom: solid 1px $light-grey-2;
+	border-bottom: solid 1px $light-grey-3;
+	display: block; 
+	font-family:$secondary-font;
 	height:rem(48px);
-	margin: 0;
-	padding: 0 0 0 lh(.33);
+	list-style: none;
+	margin-bottom:lh(); 
+	padding: 0 lh(.33); 
 	}
 
-.resp-tab-item {
-	background-color:$blue-tint;
-	border-left: 1px solid $blue-tint;
-	border-top: 2px solid $blue-tint;
-	color:$light-blue;
+.resp-tab__item {
+	background-color:#fff;
+	border-bottom: solid 1px $light-grey-3;
+	border-right: #fff;
+	border-top: 2px solid #fff;
+	color:$dark-grey-1;
 	cursor: pointer;
 	display: block;
 	float: left;
-	font-family:$secondary-font;
-	font-size:rem(16px);
 	height:rem(48px);
 	line-height:rem(48px);
 	list-style: none;
 	margin:0;
 	padding: 0 lh(1);
+	
 	&:hover {
-		color:$dark-blue;
+		background-color:$light-grey-1;
 		cursor: pointer; 
 		}
 		
 	}
 	
-.resp-tabs-list .resp-tab-active, 
-.resp-tabs-list .resp-tab-active:hover {
+.resp-tab__list .resp-tab--active, 
+.resp-tab__list .resp-tab--active:hover {
 	background-color:#fff;
-	border-left: 1px solid $blue-tint;
-	border-right: 1px solid $blue-tint;
-	border-top: 2px solid $dark-blue; 
-	color:$dark-blue;
-	cursor: pointer; 
+	border-bottom: 1px solid #fff;
+	border-left: 1px solid $light-grey-3;
+	border-right: 1px solid $light-grey-3;
+	border-top: 2px solid $secondary-color; 
+	color:$dark-grey-3;
+	cursor: pointer;
 	text-shadow:none;
 	}
-
-.resp-content-active, 
-.resp-accordion-active {
+		
+.resp-content--active, 
+.resp-accordion--active {
 	display: block;
 	}
 
-.resp-tabs-container {
+.resp-tabs__container {
 	background-color: #fff;
 	clear: left;
-	margin-bottom:lh(1);
 	padding: 0px;
 	@include respond-min(60em) {
 		padding: lh(.66) 0;
@@ -218,23 +289,34 @@ ul.tabs__content > li.active {
 	}
 
 .resp-accordion {
-	background-color: $blue-tint;
-	border-bottom: 1px solid $light-blue;
-	border-bottom:none;
-	color:$light-blue;
+	background-color: #fff;
+	border-top:2px solid $primary-color;
+	color:$dark-grey-3;
 	cursor: pointer;
 	display: none;
-	font-family:$secondary-font;
+	font-family:$primary-font;
 	margin: 0;
-	padding: lh(.5) lh(1);
+	padding:lh(.66) 0 lh(.66) lh(1);
+	position:relative;
 	}
 	
-.resp-tab-content {
+.resp-accordion:after {	
+	color:$secondary-color;
+	content: '\E80A'; 
+	display: block; 
+	font-family:"fontello";
+	font-size:rem(21px);
+	position:absolute;
+	left:0;
+	top:lh(.5);
+	}
+	
+.resp-accordion.resp-tab--active:after {	
+	content: '\E808'; 
+	}
+	
+.resp-tab__content {
 	display: none;
-	padding:lh(.33) 0;
-	@include respond-min(60em) {
-		padding: lh(.66) lh(1);
-		}
 	}
 
 .resp-tab-title:last-child {
@@ -244,21 +326,19 @@ ul.tabs__content > li.active {
 	
 /*-----------Accordion styles-----------*/
 
-.resp-tabs-container .resp-tab-active {
-	background-color: $light-blue;
-	border-color: $light-blue;
-	color:#fff;
+.resp-tabs__container .resp-tab--active {
+	color:$primary-color;
 	}
 	
 .resp-easy-accordion .resp-accordion {
 	display: block;
 	}
 	
-.resp-easy-accordion .resp-tab-content {
+.resp-easy-accordion .resp-tab__content {
 	border: 1px solid $mid-grey-1;
 	}
 
-.resp-easy-accordion .resp-tab-content:last-child {
+.resp-easy-accordion .resp-tab__content:last-child {
 	border-bottom: 1px solid $mid-grey-1;
 	}
 
@@ -267,56 +347,28 @@ ul.tabs__content > li.active {
 	width: 100%;
 	}
 
-.resp-tab-content-active {
-	display: block;
-	}
-
-.resp-accordion:first-child {
-	
+.resp-tab__content--active {
+	display: block !important;
 	}
 
 /*Here your can change the breakpoint to set the accordion, when screen resolution changed*/
-@include respond-max(60em) {
+@include respond-max(59.95em) {
 	
-    ul.resp-tabs-list {
+    ul.resp-tab__list {
         display: none;
     	}
 
     .resp-accordion {
         display: block;
+		width:100%;
     	}
 
-    .resp-accordion-closed {
+    .resp-accordion--closed {
         display:none !important;
     	}
 
 	}
 	
 .resp-arrow {
-	border-left: 6px solid transparent;
-	border-right: 6px solid transparent;
-	border-top: 12px solid $light-blue;
-	height: 0;
-	float: right;
-	margin-top: 3px;
-	width: 0;
+	display:none;
 	}
-
-.resp-tab-active span.resp-arrow {
-	border: none;
-	border-left: 6px solid transparent;
-	border-right: 6px solid transparent;
-	border-bottom: 12px solid #fff;
-	}
-
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
