--- a/content/webfonts/fontello/css/fontello.css
+++ b/content/webfonts/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?58750737');
-  src: url('../font/fontello.eot?58750737#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?58750737') format('woff'),
-       url('../font/fontello.ttf?58750737') format('truetype'),
-       url('../font/fontello.svg?58750737#fontello') format('svg');
+  src: url('../font/fontello.eot?33408136');
+  src: url('../font/fontello.eot?33408136#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?33408136') format('woff'),
+       url('../font/fontello.ttf?33408136') format('truetype'),
+       url('../font/fontello.svg?33408136#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?58750737#fontello') format('svg');
+    src: url('../font/fontello.svg?33408136#fontello') format('svg');
   }
 }
 */
@@ -59,6 +59,7 @@
 .icon-angle-left:before { content: '\e806'; } /* '' */
 .icon-comment:before { content: '\e807'; } /* '' */
 .icon-link-ext:before { content: '\e808'; } /* '' */
+.icon-angle-up:before { content: '\e809'; } /* '' */
 .icon-calculator:before { content: '\e80a'; } /* '' */
 .icon-scissors:before { content: '\e80b'; } /* '' */
 .icon-help:before { content: '\e80c'; } /* '' */
@@ -92,3 +93,4 @@
 .icon-youtube:before { content: '\e828'; } /* '' */
 .icon-gplus:before { content: '\e829'; } /* '' */
 .icon-play:before { content: '\e82a'; } /* '' */
+.icon-angle-down:before { content: '\e82b'; } /* '' */
